# ops-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent_core/: __init__.py  agent.py  audit.py  diagnosis.py  planner.py  router.py  schemas.py  session.py  topology.py
agent_kernel/: __init__.py  approval.py  audit.py  base_agent.py  executor.py  planner.py  redis_session.py  router.py  schemas.py  session.py  session_redis.py
agent_ops/: __init__.py  agent.py  diagnosis.py  extractors.py  formatters.py  memory_hooks.py  memory_schema.py  mutation_plan.py  planner.py  risk_policy.py  router.py  schemas.py  tool_setup.py  topology.py
config/: __init__.py  settings.py  topology.yaml
docs/: architecture-deep-dive.md  architecture-overview.md  architecture-v2.md  e2e-test-plan.md  example-knowledge.md  index.html  knowledge_admin.html  langfuse-integration-rfc.md  observability.md  ops_agent_architecture_briefing.pptx  ops_agent_architecture_briefing_simple_v3.pptx  playground.html  self-evolution-curator-rfc.md  shared-memory-design.md
frontend/: ApprovalModal.jsx  ChatInput.jsx  ChatMessages.jsx  JARVIS-Antd.html  JARVIS.html  Login.jsx  Sidebar.jsx  antd-chat.jsx  antd-login.jsx  antd-sidebar.jsx
gateway/: __init__.py  app.py  approvals.py  auth.py  conversations.py
llm_gateway/: __init__.py  observed.py  prompt_registry.py
scripts/: build_html.py  build_ppt.py
tests/: test_agent.py  test_google_integration_config.py  test_infra_log_planning.py  test_langfuse_observability.py  test_mcp_gateway.py  (+9 more)
(+41 files in other folders)
