[project]
name = "ops-agent"
version = "0.1.0"
description = "DevOps AI Agent - 智能运维助手"
requires-python = ">=3.11"
dependencies = [
    # === LangChain Core ===
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # === Vector DB (RAG) ===
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",

    # === Embeddings ===
    "sentence-transformers>=3.0.0",

    # === K8s ===
    "kubernetes>=30.0.0",

    # === HTTP Client ===
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",

    # === Utilities ===
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
